@@ -1,0 +1,104 @@
+<?php
+/**
+ * CPortlet class file.
+ *
+ * @author Qiang Xue <qiang.xue@gmail.com>
+ * @link http://www.yiiframework.com/
+ * @copyright Copyright &copy; 2008-2009 Yii Software LLC
+ * @license http://www.yiiframework.com/license/
+ */
+
+/**
+ * CPortlet is the base class for portlet widgets.
+ *
+ * A portlet displays a fragment of content, usually in terms of a block
+ * on the side bars of a Web page.
+ *
+ * To specify the content of the portlet, override the {@link renderContent}
+ * method, or insert the content code between the {@link CController::beginWidget}
+ * and {@link CController::endWidget} calls. For example,
+ *
+ * <pre>
+ * &lt;?php $this->beginWidget('zii.widgets.CPortlet'); ?&gt;
+ *     ...insert content here...
+ * &lt;?php $this->endWidget(); ?&gt;
+ * </pre>
+ *
+ * A portlet also has an optional {@link title}. One may also override {@link renderDecoration}
+ * to further customize the decorative display of a portlet (e.g. adding min/max buttons).
+ *
+ * @author Qiang Xue <qiang.xue@gmail.com>
+ * @version $Id$
+ * @package zii.widgets
+ * @since 1.1
+ */
+class CPortlet extends CWidget
+{
+	/**
+	 * @var string the tag name for the portlet container tag. Defaults to 'div'.
+	 */
+	public $tagName='div';
+	/**
+	 * @var array the HTML attributes for the portlet container tag.
+	 */
+	public $htmlOptions=array('class'=>'portlet');
+	/**
+	 * @var string the title of the portlet. Defaults to null.
+	 * When this is not set, Decoration will not be displayed.
+	 * Note that the title will not be HTML-encoded when rendering.
+	 */
+	public $title;
+	/**
+	 * @var string the CSS class for the decoration container tag. Defaults to 'portlet-decoration'.
+	 */
+	public $decorationCssClass='decoration';
+	/**
+	 * @var string the CSS class for the content container tag. Defaults to 'portlet-content'.
+	 */
+	public $contentCssClass='content';
+
+	/**
+	 * Initializes the widget.
+	 * This renders the open tags needed by the portlet.
+	 * It also renders the decoration, if any.
+	 */
+	public function init()
+	{
+		$this->htmlOptions['id']=$this->getId();
+		echo CHtml::openTag($this->tagName,$this->htmlOptions)."\n";
+		$this->renderDecoration();
+		echo "<div class=\"{$this->contentCssClass}\">\n";
+	}
+
+	/**
+	 * Renders the content of the portlet.
+	 */
+	public function run()
+	{
+		$this->renderContent();
+		echo "</div>\n";
+		echo CHtml::closeTag($this->tagName);
+	}
+
+	/**
+	 * Renders the decoration for the portlet.
+	 * The default implementation will render the title if it is set.
+	 */
+	protected function renderDecoration()
+	{
+		if($this->title!==null)
+		{
+			echo "<div class=\"{$this->decorationCssClass}\">\n";
+			echo "<h2>{$this->title}</h2>\n";
+			echo "</div>\n";
+		}
+	}
+
+	/**
+	 * Renders the content of the portlet.
+	 * Child classes should override this method to render the actual content.
+	 */
+	protected function renderContent()
+	{
+	}
+}
